# anyfile-wiki

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  PROJECT_START.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: llm.example.yaml  roots.example.yaml  schedule.example.yaml
docs/: agent-lifecycle.md  agent-skill.md  asset-sidecars.md  cli-reference.md  mvp0-usage.md  mvp2-analysis.md  mvp2-review-llm.md  mvp3-html-browser.md  project-status.md  roots-setup.md
scripts/: install_agent_skill.py
skills/anyfile-wiki/: SKILL.md
src/anyfile_wiki/: agent.py  agent_review.py  analyze.py  assets.py  cleanup.py  cli.py  decisions.py  defaults.py  html.py  inventory.py  parse.py  policy.py  review.py  review_server.py  review_ui.py  run_state.py  scan.py  sidecars.py
src/anyfile_wiki/configs/: __init__.py  privacy.example.yaml
src/pfkb/: analyze.py  cli.py  html.py  inventory.py  llm_config.py  parse.py  review.py  semantic.py
tests/: test_agent_mvp4.py  test_analyze.py  test_assets.py  test_cleanup_plan.py  test_extract.py  test_html.py  test_llm_client.py  test_mvp0_inventory_features.py  test_mvp1_extract_pipeline.py  test_policy.py  test_project_hygiene.py  test_review.py  test_run_state.py  test_scan.py
